deployment/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-grpc-go
  labels:
    app: web-grpc-go
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-grpc-go
  template:
    metadata:
      labels:
        app: web-grpc-go
    spec:
      containers:
        - name: web-grpc-go
          image: local-registry:5001/web-grpc-go:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: web-grpc-go
spec:
  selector:
    app: web-grpc-go
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http2
